* [html5] fix list's overflow style.

--- a/html5/render/vue/styles/components.css
+++ b/html5/render/vue/styles/components.css
@@ -201,6 +201,10 @@ body > .weex-scroller {
   position: relative;
 }
 
+.weex-list-wrapper {
+  overflow-y: scroll !important;
+}
+
 .weex-list-inner,
 .weex-scroller-inner {
   display: -webkit-box;
